[gd_scene load_steps=4 format=3 uid="uid://bgjulm4llqfqf"]

[ext_resource type="Script" path="res://scripts/SceneManager.gd" id="1_v5qkh"]
[ext_resource type="PackedScene" uid="uid://f7blx43nw6h" path="res://scenes/start_menu.tscn" id="2_dcdvo"]
[ext_resource type="PackedScene" uid="uid://df1hv1gsr0vfw" path="res://scenes/transition_scene.tscn" id="3_xdi4v"]

[node name="SceneManager" type="Node2D"]
script = ExtResource("1_v5qkh")

[node name="Node2D" type="Node2D" parent="."]

[node name="StartMenu" parent="Node2D" instance=ExtResource("2_dcdvo")]
offset_left = -491.0
offset_top = 132.0
offset_right = -491.0
offset_bottom = 132.0

[node name="TransitionScene" parent="." instance=ExtResource("3_xdi4v")]

[connection signal="transitioned" from="TransitionScene" to="." method="_on_transition_scene_transitioned"]
